--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "canvas-confetti": "^1.9.4",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.24",
     "install": "^0.13.0",
     "rc-slider": "^10.6.2",
     "react": "^18.2.0",
