--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.24",
     "install": "^0.13.0",
+    "lucide-react": "^0.552.0",
     "rc-slider": "^10.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
